--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=ASSEN
 APP_ENV=local
 APP_KEY=base64:5Rea75mbLTCr/ig0HcG6gfucLSohWf1RkJQoVlV2b5I=
 APP_DEBUG=false
@@ -26,10 +26,9 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_USERNAME=9e5596e9b84014
+MAIL_PASSWORD=c14a343d9e3dbe
+MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
