--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=ASSEN
 APP_ENV=local
 APP_KEY=base64:5Rea75mbLTCr/ig0HcG6gfucLSohWf1RkJQoVlV2b5I=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -43,3 +43,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SMS_PANEL_USER=saeed72
+SMS_PANEL_PASS=12345
+SMS_PANEL_URL=https://ippanel.com/services.jspd
+SMS_PANEL_FROM=2000505
