--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=shop
+DB_DATABASE=assen
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -43,7 +43,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SMS_PANEL_USER="heshmat2shirkool"
-SMS_PANEL_PASS="rmehdi@1626"
-SMS_PANEL_URL="https://ippanel.com/patterns/pattern"
-SMS_PANEL_FROM="+983000505"
+SMS_PANEL_USER=""
+SMS_PANEL_PASS=""
+SMS_PANEL_URL=""
+SMS_PANEL_FROM=""
